Ensure there are no gaps in heading levels
In other words, ensure we don't use H2 when there is no H1, and don't
use H3 and H1 but no H2.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ th, td { /* ns 4 */
 h1, h2, h3, h4, h5, h6 { text-align: left ; margin-bottom: 1em; }
 /* background should be transparent, but WebTV has a bug */
 h1, h2, h3, h4 { color: #B01C2e; background: white }
-h1 { font: 170% "Lucida Grande", "Lucida Sans Unicode", Helvetica, sans-serif }
+h1 { font: 160% "Lucida Grande", "Lucida Sans Unicode", Helvetica, sans-serif }
 h2 { font: 140% "Lucida Grande", "Lucida Sans Unicode", Helvetica, sans-serif }
 h3 { font: 120% "Lucida Grande", "Lucida Sans Unicode", Helvetica, sans-serif }
 h4 { font: 100% "Lucida Grande", "Lucida Sans Unicode", Helvetica, sans-serif }
